force-app/main/default/objects/Account/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <label>Chain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chain</valueSetName>
    </valueSet>
</CustomField>