force-app/main/default/objects/Account/fields/Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Category__c</fullName>
    <label>Client Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_category</valueSetName>
    </valueSet>
</CustomField>