force-app/main/default/objects/Account/fields/Fiscal_ID__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_ID__c</fullName>
    <label>Fiscal ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>