force-app/main/default/objects/Account/fields/IATA__c.field-meta.xml
<CustomField>
    <fullName>IATA__c</fullName>
    <label>IATA</label>
    <length>25</length>
    <type>Text</type>
</CustomField>